@@ -11,93 +11,98 @@
 <link type="text/css" rel="stylesheet" href="foundation/foundation.min.css">
 </head>
 <body>
-	<div id="standard-footer" style="background-color: #F0F0F0;">
-	<style type="text/css" scoped style="display:none;">
-	#standard-footer .row{ width: 100%; max-width: 1280px; }
-	#standard-footer body, #standard-footer div, #standard-footer dl, #standard-footer dt, #standard-footer dd, #standard-footer ul, #standard-footer ol, #standard-footer li, #standard-footer h1, #standard-footer h2, #standard-footer h3, #standard-footer h4, #standard-footer h5, #standard-footer h6, #standard-footer pre, #standard-footer form, #standard-footer p, #standard-footer blockquote, #standard-footer th, #standard-footer td { font-size: 1rem; font-size: inherit; }
-	#standard-footer{ color: #999; padding: 1.25rem 0; font-size: .7rem;}
-	#standard-footer h1, #standard-footer h2, #standard-footer h3, #standard-footer h4, #standard-footer h5, #standard-footer h6{ color: #999;}
-	#standard-footer ul{ list-style: none; margin: 0; padding: 0;}
-	#standard-footer ul li{}
-	#standard-footer ul li a{ color: #999;}
-	#standard-footer ul li a:hover{ text-decoration: underline;}
-	</style>
-		<div class="row">
-			<div class="large-4 columns">
-				<div class="row">
-					<div class="large-5 columns">
-						<img src="//igovphil.github.io/gwt-footer/govph-seal-mono-footer.jpg" />
-					</div>
-					<div class="large-7 columns">
-						<h4>Republic of the Philippines</h4>
-						<p>All content is in the public domain unless otherwise stated.</p>
-						<p>Privacy Policy</p>
-					</div>
+<div id="standard-footer" style="background-color: #efefef;">
+<style type="text/css" scoped style="display:none;">
+@import url(//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900);
+html,body{height:100%;width:100%;font-family:'Roboto',sans-serif;-webkit-font-smoothing:antialiased;}
+#standard-footer .row{ width: 100%; max-width: 1280px; }
+#standard-footer body, #standard-footer div, #standard-footer dl, #standard-footer dt, #standard-footer dd, #standard-footer ul, #standard-footer ol, #standard-footer li, #standard-footer h1, #standard-footer h2, #standard-footer h3, #standard-footer h4, #standard-footer h5, #standard-footer h6, #standard-footer pre, #standard-footer form, #standard-footer p, #standard-footer blockquote, #standard-footer th, #standard-footer td { font-size: 1rem; font-size: inherit; }
+#standard-footer{ color: #505050; padding: 1.25rem 0; font-size: .7rem;}
+#standard-footer h1, #standard-footer h2, #standard-footer h3, #standard-footer h4, #standard-footer h5, #standard-footer h6{ color: #505050;}
+#standard-footer ul{ list-style: none; margin: 0; padding: 0;}
+#standard-footer ul li{}
+#standard-footer ul li a{ color: #505050;}
+#standard-footer ul li a:hover{ text-decoration: underline;}
+#standard-footer h4 {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.9em;
+}
+</style>
+	<div class="row">
+		<div class="large-4 columns">
+			<div class="row">
+				<div class="large-5 columns">
+					<img src="//gwhs.i.gov.ph/gwt-footer/govph-seal-mono-footer.jpg" />
+				</div>
+				<div class="large-7 columns">
+					<h4>Republic of the Philippines</h4>
+					<p>All content is in the public domain unless otherwise stated.</p>
+					<!-- <p>Privacy Policy</p> -->
 				</div>
 			</div>
-			<div class="large-7 large-offset-1 medium-offset-1 columns">
-				<div class="row">
-					<div class="large-5 medium-5 columns">
-						<h4>About GOVPH</h4>
-						<p>Learn more about the Philippine government, its structure, how government works and the people behind it.</p>
-						<ul>
-							<li><a href="http://www.gov.ph/">Official Gazette</a></li>
-							<li><a href="http://data.gov.ph/">Open Data Portal</a></li>
-							<!--
-							<li><a href="#">Send us your feedback</a></li>
-							-->
-						</ul>
-					</div>
-					<div class="large-6 medium-6 large-offset-1 medium-offset-1 columns">
-						<h4>Government Links</h4>
-						<ul>
-							<li><a href="http://president.gov.ph/">Office of the President</a></li>
-							<li><a href="http://ovp.gov.ph/">Office of the Vice President</a></li>
-							<li><a href="http://www.senate.gov.ph/">Senate of the Philippines</a></li>
-							<li><a href="http://www.congress.gov.ph/">House of Representatives</a></li>
-							<li><a href="http://sc.judiciary.gov.ph/">Supreme Court</a></li>
-							<li><a href="http://ca.judiciary.gov.ph/">Court of Appeals</a></li>
-							<li><a href="http://sb.judiciary.gov.ph/">Sandiganbayan</a></li>
-						</ul>
-					</div>
+		</div>
+		<div class="large-7 large-offset-1 medium-offset-1 columns">
+			<div class="row">
+				<div class="large-5 medium-5 columns">
+					<h4>About GOVPH</h4>
+					<p>Learn more about the Philippine government, its structure, how government works and the people behind it.</p>
+					<ul>
+						<li><a href="http://www.gov.ph/">Official Gazette</a></li>
+						<li><a href="http://data.gov.ph/">Open Data Portal</a></li>
+						<li><a href="http://www.gov.ph/feedback/idulog/">Send us your feedback</a></li>
+					</ul>
+				</div>
+				<div class="large-6 medium-6 large-offset-1 medium-offset-1 columns">
+					<h4>Government Links</h4>
+					<ul>
+						<li><a href="http://president.gov.ph/">Office of the President</a></li>
+						<li><a href="http://ovp.gov.ph/">Office of the Vice President</a></li>
+						<li><a href="http://www.senate.gov.ph/">Senate of the Philippines</a></li>
+						<li><a href="http://www.congress.gov.ph/">House of Representatives</a></li>
+						<li><a href="http://sc.judiciary.gov.ph/">Supreme Court</a></li>
+						<li><a href="http://ca.judiciary.gov.ph/">Court of Appeals</a></li>
+						<li><a href="http://sb.judiciary.gov.ph/">Sandiganbayan</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
-	<script type="text/javascript">
-	(function(d, f){
-		var fc;
-		fc = d.getElementById(f);
-		var resetSize = function(){
-			if ('parentIFrame' in window) window.parentIFrame.size(fc.clientHeight);
-		}
-		
-		// console.log(fc.clientHeight);
-		window.onresize = function(event) {
-		    resetSize();
-		};
+</div>
+<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
+<script type="text/javascript">
+(function(d, f){
+	var fc;
+	fc = d.getElementById(f);
+	var resetSize = function(){
+		if ('parentIFrame' in window) window.parentIFrame.size(fc.clientHeight);
+	}
+	
+	// console.log(fc.clientHeight);
+	window.onresize = function(event) {
+	    resetSize();
+	};
 
-		var init = function(){
-			if (document.createEvent) { // W3C
-		    	var ev = document.createEvent('Event');
-				ev.initEvent('resize', true, true);
-				window.dispatchEvent(ev);
-			}
-			else { // IE
-				element=document.documentElement;
-				var event=document.createEventObject();
-				element.fireEvent("onresize",event);
-			}
-			resetSize();
+	var init = function(){
+		if (document.createEvent) { // W3C
+	    	var ev = document.createEvent('Event');
+			ev.initEvent('resize', true, true);
+			window.dispatchEvent(ev);
 		}
-		var checkLoad = function() {
-			document.readyState !== "complete" ? setTimeout(checkLoad, 11) : init();   
-		};
+		else { // IE
+			element=document.documentElement;
+			var event=document.createEventObject();
+			element.fireEvent("onresize",event);
+		}
+		resetSize();
+	}
+	var checkLoad = function() {
+		document.readyState !== "complete" ? setTimeout(checkLoad, 11) : init();   
+	};
 
-		checkLoad(); 
-		init();
-	}(document, 'standard-footer'));
-	</script>
+	checkLoad(); 
+	init();
+}(document, 'standard-footer'));
+</script>
 </body>
 </html>
