@@ -3,7 +3,7 @@
   <title>Standard Footer</title>
 </head>
 <body>
-  <h1>Footer Generator</h1>
+	<h1>Footer Generator</h1>
 <pre>
 &lt;div id="gwt-standard-footer"&gt;&lt;/div&gt;
 &lt;script type="text/javascript"&gt;
@@ -11,7 +11,7 @@
   var js, gjs = d.getElementById('gwt-standard-footer');
 
   js = d.createElement(s); js.id = id;
-  js.src = "//igovphil.github.io/gwt-footer/footer.js";
+  js.src = "//gwhs.i.gov.ph/gwt-footer/footer.js";
   gjs.parentNode.insertBefore(js, gjs);
 }(document, 'script', 'gwt-footer-jsdk'));
 &lt;/script&gt;
@@ -19,14 +19,14 @@
 <div id="gwt-standard-footer">
 </div>
 <script type="text/javascript">
-(function(d, s, id) {
-  var js, gjs = d.getElementById('gwt-standard-footer');
+    (function(d, s, id) {
+      var js, gjs = d.getElementById('gwt-standard-footer');
 
-  js = d.createElement(s); js.id = id;
-  js.src = "//igovphil.github.io/gwt-footer/footer.js";
-  gjs.parentNode.insertBefore(js, gjs);
+      js = d.createElement(s); js.id = id;
+      js.src = "//gwhs.i.gov.ph/gwt-footer/footer.js";
+      gjs.parentNode.insertBefore(js, gjs);
 
-}(document, 'script', 'gwt-footer-jsdk'));
+    }(document, 'script', 'gwt-footer-jsdk'));
 </script>
 </body>
 </html>
