@@ -1,7 +1,0 @@
-<?php
-/**
- * @file
- * the source file of the index
- */
-
-include("footer-source.html");
