@@ -1,7 +1,7 @@
 # PST script time-widget generator
 **Authored by: Voltz Jeturian voltz.jeturian@icto.dost.gov.ph**
 
-#### v0.1 - Beta
+#### v0.2 - Beta
 
 ##### Note
 This version is still under **Beta** version and still an experimental version. Use the script in staging and testing accounts only
@@ -19,10 +19,8 @@ To add the PST on your template, simply add this syntax after the agency footer 
 <script type="text/javascript">
 (function(d, eId) {
   var js, gjs = d.getElementById(eId);
-
   js = d.createElement('script'); js.id = 'gwt-pst-jsdk';
-  // point temporarily to localhost
-  js.src = "//igovphil.github.io/pst/gwtpst.js";
+  js.src = "//gwhs.i.gov.ph/pst/gwtpst.js?"+new Date().getTime();
   gjs.parentNode.insertBefore(js, gjs);
 }(document, 'gwt-pst'));
 </script>
@@ -31,14 +29,20 @@ To add the PST on your template, simply add this syntax after the agency footer 
 ## FUTURE UPDATES
 - add default option for Light or Dark option
 - add font option for the text output
+- enable multiple time instance just by selecting ID
+- add more options for display
 
 ### Known bugs
 - selection id 'gwt-pst' may possibly changed on embed, add dynamic id selection
 - secure link may not possibly load unix_time.php of unsecured server
 
-###### CHANGE LOGS
+## CHANGE LOGS
 **2016-02-16**
 - created dynamic PST class
 
 **2016-02-21**
 - added auto embed script
+
+**2016-03-11**
+- updated PST script to run JSONP
+- added no cache to avoid static time content
