@@ -1,3 +1,10 @@
 ###### CHANGE LOGS
 **2016-02-16**
-- created dynamic PST class 90%
+- created dynamic PST class
+
+**2016-02-21**
+- added auto embed script
+
+**2016-03-11**
+- updated PST script to run JSONP
+- added no cache to avoid static time content
